...
  final String state;
  final String zipCode;
  final String country;
  final bool isDefault;
  final AddressType type;

  const Address({
    required this.id,
    required this.firstName,
    required this.lastName,
    required this.street,
    this.street2,
    required this.city,
...
